--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "naomifauxapi",
+  "name": "node-ci",
   "version": "1.0.0",
   "description": "CI/CD Agent",
   "main": "index.js",
@@ -22,7 +22,7 @@
     "babel": "inherit"
   },
   "dependencies": {
-    "microback": "latest",
+    "microback": "^0.2.0",
     "nodegit": "^0.20.2",
     "shelljs": "^0.7.8",
     "vso-node-api": "^6.2.8-preview"
