--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "babel": "inherit"
   },
   "dependencies": {
-    "microback": "^0.2.0",
+    "microback": "0.2.1",
     "nodegit": "^0.20.3",
     "shelljs": "^0.7.8",
     "vso-node-api": "^6.2.8-preview"
