--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel": "inherit"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "microback": "0.2.4",
     "nodegit": "^0.20.3",
     "shelljs": "^0.7.8",
